YUKRV-12487 YUK-18584 - Device Notes Spacing issues while creating any Note  - Changed the "white-space: pre" style on notes to "white-space: pre-wrap" so that the note text retains the spaces and carriage returns specified by the user, but wraps instead of overflowing the table column.

--- a/yukon-client/yukon-web/src/com/cannontech/web/common/resources/overrides.less
+++ b/yukon-client/yukon-web/src/com/cannontech/web/common/resources/overrides.less
@@ -101,6 +101,7 @@
 .wsn { white-space: normal; }
 .wsnw { white-space: nowrap; }
 .wsp { white-space: pre; }
+.wspr { white-space: pre-wrap; }
 .z1 { zoom: 1; }
 .zN { zoom: normal; }
 
